[package]
name = "actions-trigger"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
toml = "0.8.13"
#toml_edit = "0.22.13"
figment = { version = "0.10", features = ["toml", "env"] }
log = "0.4.21"
env_logger = "0.11.3"
